# X7-Engine

./: CMakeLists.txt  README.md
X7 Engine/: CMakeLists.txt  X7 Engine.cpp  X7 Engine.h
X7 Engine/CDM/: CMakeLists.txt
X7 Engine/CDM/inc/: AMD_ZEN.h  CDM.h  CPU.h
X7 Engine/CDM/src/: AMD_ZEN.cpp  CDM.cpp  CPU.cpp
X7 Engine/DSM/: CMakeLists.txt
X7 Engine/DSM/inc/: DSM.h
X7 Engine/DSM/src/: DSM.cpp
X7 Engine/GDM/: CMakeLists.txt
X7 Engine/GDM/inc/: GDM.h  GPUMetrics.h  GPU_AMD.h  GPU_NVIDIA.h
X7 Engine/GDM/src/: GDM.cpp  GPU_AMD.cpp  GPU_NVIDIA.cpp
X7 Engine/KAW/: CMakeLists.txt
X7 Engine/KAW/inc/: KernelAccess.h
X7 Engine/KAW/src/: KernelAccess.cpp
X7 Engine/MDI/: CMakeLists.txt
X7 Engine/MDI/inc/: Monitor.h  Sensor.h  SensorTree.h
X7 Engine/MDI/src/: Sensor.cpp  SensorTree.cpp
X7 Engine/NSM/: CMakeLists.txt
X7 Engine/NSM/inc/: NSM.h
X7 Engine/NSM/src/: NSM.cpp
X7 Engine/PCC/: CMakeLists.txt
X7 Engine/PCC/inc/: HotkeyManager.h  ProcessData.h  ProcessMonitor.h
X7 Engine/PCC/src/: HotkeyManager.cpp  ProcessData.cpp  ProcessMonitor.cpp
X7 Engine/SDKs/: CMakeLists.txt
X7 Engine/TRL/: CMakeLists.txt
X7 Engine/TRL/inc/: EasyLogger.h  LogResult.h  Logger.h
X7 Engine/TRL/src/: Logger.cpp
X7 Engine/WMW/: CMakeLists.txt
X7 Engine/WMW/inc/: COMmanager.h  EventSink.h  PDHhelper.h  WMIwatcher.h
X7 Engine/WMW/src/: COMmanager.cpp  EventSink.cpp  PDHhelper.cpp  WMIwatcher.cpp
